# Pdf_Reader

./: .gitignore  README.md  config.yaml  init_setup.sh  main.py  requirements.txt  setup.cfg  setup.py
research/: trial.ipynb
src/pdfReader/: __init__.py
src/pdfReader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pdfReader/entity/: pdfRotation.py  rotationAPI.py  upload_files.py
src/pdfReader/entity/templates/: index.html  pdf.html
src/pdfReader/utils/: __init__.py  common.py
